# parabix-json-fmt

./: .clang-format  .gitignore  CMakeLists.txt  LICENCE  README.md
bench/: sample.json  w-pablo-parser.txt  wo-pablo-parser.txt
include/: cli.hpp  global.hpp  kernel_methods.hpp
include/kernel/: indent_bixnum.hpp  lex_json.hpp
pablo/: json_fmt.pablo
src/: cli.cpp  cli.hpp  global.hpp  kernel_methods.hpp  main.cpp  pipeline.cpp  pipeline.hpp
src/kernel/: analyze_json.cpp  analyze_json.hpp  find_spread_insert_locations.cpp  find_spread_insert_locations.hpp  indent_bixnum.cpp  indent_bixnum.hpp  insert_chars.cpp  insert_chars.hpp  lex_json.cpp  lex_json.hpp  split.cpp  split.hpp
test/: go.mod  helper.go  simple_test.go
test/io/: simple_test.go
